--- a/2-scripts/berkalieva/final-project.ipynb
+++ b/2-scripts/berkalieva/final-project.ipynb
@@ -1188,7 +1188,9 @@
    "source": [
     "### 3a. Predicting Contraceptive: No Use, Short Term, Long Term\n",
     "#### i. Feature Selection and Data Preparation\n",
-    "We will start by running our model with all existing features in the dataset to evaluate initial performance."
+    "Our first set of models will work on predicting all three outcomes. We will start by running our multinomial logistic regression model with all existing features in the dataset to evaluate initial performance. Afterwards, we will utilize a leave-one-out approach to determine which features help vs. hurt accuracy in order to pick the optimal combination.\n",
+    "\n",
+    "Here is the ultimate set of features that we drop (see Part iii on details)."
    ]
   },
   {
@@ -1680,7 +1682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### iv. Visualize Feature Selection vs. CV Error\n",
+    "#### iii. Visualize Feature Selection vs. CV Error\n",
     "To select features, we began with including all features in the model and removing, one by one, those that decreased training error. We have written a function that evaluates this for the first round (first feature removal) and subsequently, we plot this to more easily visualize the effect of feature removal."
    ]
   },
@@ -1798,7 +1800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### iii. Random Forests\n",
+    "#### iv. Random Forests\n",
     "\n",
     "To fit a Random Forests model to the data, we will tune the number of trees using cross-validation, while allowing the Random Forests algorithm to tune the remaining features through its use of bagging. We visualize the training and cross-validated accuracies for a range of number trees to (1) confirm overfitting occurs when fitting on a single training set and (2) select the number of trees we will use."
    ]
@@ -1866,7 +1868,7 @@
     "                palette=['#DF6589', '#FFC3AF'])\n",
     "ax.set(xlabel='Number Trees',\n",
     "       ylabel='Accuracy',\n",
-    "       title = 'Random Forests Training Accuracy Varying Number Trees');"
+    "       title = 'Random Forests Accuracy by Varying Number Trees: No Use, Short-term, Long-term');"
    ]
   },
   {
@@ -1910,7 +1912,12 @@
    "metadata": {},
    "source": [
     "### 3b. Predicting Binary Contraceptive: No vs. Yes\n",
-    "#### i. Feature Selection and Data Preparation"
+    "\n",
+    "We will repeat the above process on the binary outcomes (starting with use vs. no use).\n",
+    "\n",
+    "#### i. Feature Selection and Data Preparation\n",
+    "\n",
+    "Here are the features we have selected to use (see Part iii for details)."
    ]
   },
   {
@@ -2326,7 +2333,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### iii. Visualize Feature Selection vs. CV Error"
+    "#### iii. Visualize Feature Selection vs. CV Error\n",
+    "\n",
+    "Here is how dropping features in the first round affected training and CV accuracy."
    ]
   },
   {
@@ -2412,7 +2421,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### iii. Random Forests"
+    "#### iv. Random Forests\n",
+    "\n",
+    "By cross-validating number of trees, we end up with 25 trees to improve accuracy."
    ]
   },
   {
@@ -2475,7 +2486,14 @@
     "                palette=['#DF6589', '#FFC3AF'])\n",
     "ax.set(xlabel='Number Trees',\n",
     "       ylabel='Accuracy',\n",
-    "       title = 'Binary (yes vs. no) Random Forests Training Accuracy Varying Number Trees');"
+    "       title = 'Binary (yes vs. no) Random Forests Accuracy by Varying Number Trees');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We fit the final model on the training and test datasets."
    ]
   },
   {
@@ -2511,14 +2529,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3c. Predicting Contraceptive of Those Who Use: Short-term vs. Long-term"
+    "### 3c. Predicting Contraceptive of Those Who Use: Short-term vs. Long-term\n",
+    "\n",
+    "This is our final round of running models on binary short-term vs. long-term outcome. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### i. Feature Selection and Data Preparation"
+    "#### i. Feature Selection and Data Preparation\n",
+    "\n",
+    "Here are the features we selected for this binary case:"
    ]
   },
   {
@@ -2921,7 +2943,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### iii. Visualize Feature Selection vs. CV Error"
+    "#### iii. Visualize Feature Selection vs. CV Error\n",
+    "\n",
+    "Here is how accuracy changes when removing each feature in the first round."
    ]
   },
   {
@@ -3007,7 +3031,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### iv. Random Forests"
+    "#### iv. Random Forests\n",
+    "\n",
+    "We cross-validate for number of trees and end up with 15 trees for the final model."
    ]
   },
   {
@@ -3070,7 +3096,14 @@
     "                palette=['#DF6589', '#FFC3AF'])\n",
     "ax.set(xlabel='Number Trees',\n",
     "       ylabel='Accuracy',\n",
-    "       title = 'Binary (short vs. long) Random Forests Training Accuracy Varying Number Trees');"
+    "       title = 'Binary (short vs. long) Random Forests Accuracy by Varying Number Trees');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We fit the final RF model to the training and test datasets."
    ]
   },
   {
@@ -3496,7 +3529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
